# fiction-ai-2

fiction-ai/: .gitignore  README.md  migrate_to_mongo.py  pyproject.toml
fiction-ai-ui/: README.md  index.html  package-lock.json  package.json
fiction-ai-ui/src/: App.css  App.tsx  index.css  types.ts
fiction-ai-ui/src/api/: auth.ts  client.ts  fiction.ts
fiction-ai-ui/src/components/features/books/: BookList.tsx  CreateBookForm.tsx
fiction-ai-ui/src/components/features/chapters/: ChapterEditor.tsx  ChapterList.tsx
fiction-ai-ui/src/components/features/outline/: OutlineView.tsx
fiction-ai-ui/src/components/features/reader/: ReaderView.tsx
fiction-ai-ui/src/components/features/snippets/: SnippetManager.tsx
fiction-ai-ui/src/components/layout/: AppLayout.tsx  Sidebar.tsx  ThemeToggle.tsx
fiction-ai-ui/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  scroll-area.tsx  skeleton.tsx  textarea.tsx
fiction-ai-ui/src/contexts/: AuthContext.tsx
fiction-ai-ui/src/pages/: Home.tsx  Login.tsx  ReadingPage.tsx  Register.tsx  VerifyEmail.tsx
fiction-ai/.github/: copilot-instructions.md
fiction-ai/src/: app.py  auth.py  email_service.py  http_api.py  orchestrator.py
fiction-ai/src/interaction/: intent.py
fiction-ai/src/llm/: client.py
fiction-ai/src/storage/: __init__.py  book_store.py  mongodb.py  paths.py  project_store.py  snippet_store.py  user_store.py
fiction-ai/src/writing/: planner.py  writer.py
